<resources>
    <string name="app_name">IndoorLocalizationRelease</string>
    <string name="str_desc">image description</string>
    <string name="str_delete">delete c++ pointer</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">选择照片</string>
    <string name="match">进行匹配</string>
    <string name="first_match">1st匹配</string>
    <string name="second_match">2nd匹配</string>
    <string name="third_match">3rd匹配</string>
    <string name="no_match">无匹配</string>
    <string name="start_localizaion">开始定位</string>
    <string name="start_calibration">进行校准</string>
    <string name="begin_calibrate">开始校准</string>
    <string name="reset">reset</string>
    <string name="test_folder">请输入记录的文件夹号</string>
    <string name="choose_first_n">取前几个进行匹配(1-7)</string>
    <string name="record">记录</string>
    <string name="clean">清空</string>
    <string name="location">标注拍摄位置</string>

</resources>
